# Academic-University-projects

./: .gitignore
Cpp_labs/Itiop/Lab5/: Multiptier.cpp  ScalarSolver.cpp  mainprog.cpp
Cpp_labs/Itiop/LabN1/: main.cpp
Cpp_labs/Itiop/LabN2/: main.cpp
Cpp_labs/Mpiaa/Lab3_1/: lcs.cpp  lcs.h  lcs_test  lcs_test.cpp  main.cpp
Cpp_labs/Mpiaa/Lab4_1/: CMakeLists.txt  graph_test.cpp  main.cpp  shortest_path.cpp  shortest_path.h  shortest_path_test.cpp
Cpp_labs/Mpiaa/Lab5/: Makefile  main.cpp  tsp.cpp  tsp.h  tst_test.cpp
Cryptography/Cripta_Lab1/: Hemming.py  huffman2.0.py
Cryptography/Crypt_part_II/: huffman.py
Interfaces/PriceList/: .gitignore  PriceListManager.sln  README.md  docker-compose.yml
Interfaces/PriceList/PriceListManager.API/: PriceListManager.API.csproj  Program.cs  appsettings.json
Interfaces/PriceList/PriceListManager.API/Controllers/: AuthController.cs  CategoriesController.cs  (+2 more)
Interfaces/PriceList/PriceListManager.Client/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
Interfaces/pricelist/: docker-compose.yml  pom.xml
MO/: README.md
MO/task1_gauss/: README.md  gauss_method.py
MO/task2_hooke_jeeves/: README.md  hooke_jeeves.py
MO/task3_rosenbrock/: README.md  rosenbrock_method.py
MO/task4_analysis/: README.md  comparison.py
OOP/OOPLabs/: CMakeLists.txt  Makefile  data.txt  data1.txt  data2.txt  data3.txt  data_exporter.cpp  data_exporter.h  empiric.cpp  empiric.h  main.cpp  mixture.cpp  mixture.h  pearson_distribution.cpp  pearson_distribution.h  test.txt  test1.txt  test_empiric.cpp  test_mixture.cpp  test_pearson.cpp
OOP/lab4/: CMakeLists.txt  empiric.h  idistribution.h  ipersistent.h  mixture.h  pearson_distribution.h  test_lab4.cpp
OOP/unknown_project/: ab.cpp  data_exporter.cpp  data_exporter.h  pearson_distribution.cpp  pearson_distribution.h  test_pearson.cpp
Osi/Lab_3_Chat/: Client2.cpp  Client3.cpp  Server2.cpp  Server3.cpp  Win3LabClient.cpp
Osi/Lab_5/: pingUtil.c
Software_dev_tech/: .gitignore  .~lock.Проект 1. Конвертор р1_р2(1).docx#  README.md
Software_dev_tech/Calc/CalculatorFractions/: BUILD_WINDOWS.md  CMakeLists.txt  CalculatorFractions  CalculatorFractions.csproj  CalculatorFractions.slnx  README.md  Лабораторный практикум по ТРПС. часть 1. Калькулятор..docx
Software_dev_tech/Calc/CalculatorFractions/Tests/: CalculatorFractions.Tests.csproj  TCtrlTests.cs  TEditorTests.cs  TFracTests.cs  TMemoryTests.cs  TProcTests.cs  Tests.csproj  UnitTest1.cs
Software_dev_tech/Calc/CalculatorFractions/src/: MainForm.Designer.cs  MainForm.cs  Program.cs  TCtrl.cs  TEditor.cs  TFrac.cs  TMemory.cs  TProc.cs  UClcPnl.cpp  UClcPnl.dfm  UClcPnl.h  UControl.cpp  UControl.h  UEditor.cpp  UEditor.h  UFrac.cpp  UFrac.h  UMemory.h  UProc.h  main.cpp
Software_dev_tech/Converter/: Проект 1. Конвертор р1_р2(1).docx
Software_dev_tech/Converter/Converter_p1_p2/: Control_.cs  Conver_10_p.cs  Conver_P_10.cs  Editor.cs  Конвертер.cs
Software_dev_tech/Converter/Converter_p1_p2.Tests/: UnitTest1.cs
Software_dev_tech/Converter_p1_p2/: Control_.cs  Conver_P_10.cs  Converter_p1_p2.sln  Editor.cs  Form1.Designer.cs  Form1.cs  History.cs  IConverter.cs  Program.cs  Конвертер.Designer.cs  Конвертер.cs
Software_dev_tech/Converter_p1_p2.Tests/: Conver_10_pTests.cs  Conver_P_10Tests.cs  Converter_p1_p2.Tests.csproj
Software_dev_tech/Lab1/: README.md
Software_dev_tech/LastCalc/Calculator/: Calculator.slnx
Software_dev_tech/PTFBook/PTFBook/: PTFBook.csproj  PTFBook.sln  Program.cs  UAbonent.cs  UAbonentList.cs  UAbout.Designer.cs  UControl.cs  UPanel.Designer.cs  UPanel.cs
Software_dev_tech/PTFBookSagaidak/: PTFBook.slnx
Software_dev_tech/PTFBookSagaidak/PTFBook/: Program.cs  UAbonentList.cs  Upanel.Designer.cs
Systems_analysis/: ЛР№5 Армбристер ПМИ-31.docx  ЛР№5 Долгополов ПМИ-31.docx
Systems_analysis/lab4Sys/: lab4.py
TeorVer/: Gisto1.py  Gisto2.py  РГЗ Долгополов.docx
UFO/UFO_Laba_2/: a.out  index.c
UFO/UFO_Laba_3/: a.out  index.c
Web_Tsigulin/: Отчет_ПЗ_4_Армбристер,_Долгополов_ПМИ_31.docx
Web_Tsigulin/ webLab2/: Отчет ПЗ3. Армбристер, Долгополов ПМИ-31.docx
Web_Tsigulin/Lab1Sem6/Docker1/: Dockerfile
Web_Tsigulin/Lab2Sem6/: Dockerfile  docker-compose.yml  package.json  server.js
Web_Tsigulin/Lab2Sem6/comments_data/: comments.json
(+106 files in other folders)
